Simplify collector